Modificaciones para ios

--- a/manifest.json
+++ b/manifest.json
@@ -5,6 +5,7 @@
     "background_color": "#3498db",
     "theme_color": "#3498db",
     "display": "standalone",
+    "orientation": "portrait",
     "icons": [
         {
             "src": "img/icons/icon-72x72.png",
